kong/deshboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    konghq.com/protocols: "http,https"
    konghq.com/https-redirect-status-code: "426"
spec:
  ingressClassName: kong
  rules:
  - host: kube.hvgdev.website
    http:
      paths:
      - backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
        path: /
        pathType: ImplementationSpecific
